# httpserver

./: CMakeLists.txt  README  configure  debug_test.cc  debug_test.h  file_io.cc  file_io.h  handle.cc  handle.h  http_io.cc  main.cc  parse.cc  parse.h  request_text  response.cc  response.h  serve.cc  serve.h  serve_client.cc  serve_client.h  todo  utility.cc  utility.h
client/: client.cc
server/: .main.cc.swp  configure.cc  configure.h  http_io.cc  http_io.h  main.cc  memory_pool.cc  memory_pool.h  parse.cc  parse.h  serve.cc  serve.h
